--- a/frontEnd/src/css/loginForm.css
+++ b/frontEnd/src/css/loginForm.css
@@ -29,5 +29,3 @@ form > div.flexButton {
   display: flex;
   flex-direction: row;
 }
-@media only screen and (max-width: 600px) {
-}
