--- a/frontEnd/src/css/postItem.css
+++ b/frontEnd/src/css/postItem.css
@@ -65,7 +65,7 @@ div.post > div.data > img {
   object-fit: cover;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
   div.post {
     background-color: #b4bbb8;
     display: flex;
